Refactor .env file and add STRIPE_SECRET_KEY,created stripe payment gateway

--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -44,6 +44,10 @@
   margin: 10px 0px;
 }
 
+.currency-symbol {
+  margin-right: 0.15rem;
+}
+
 .food-item-img-container {
   position: relative;
 }
