--- a/frontend/src/pages/Cart/Cart.css
+++ b/frontend/src/pages/Cart/Cart.css
@@ -97,6 +97,17 @@
   cursor: pointer;
 }
 
+.cart-promocode .promo-message {
+  color: #4caf50;
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 1rem;
+}
+.cart-promocode .promo-message.error {
+  color: #f44336; /* This is intended for error messages */
+  font-weight: bold;
+}
+
 @media (max-width: 750px) {
   .cart-bottom {
     flex-direction: column-reverse;
